@@ -46,6 +46,7 @@
 #define GCONF_DBUS_DATABASE_GET_ALL_ENTRIES "AllEntries"
 #define GCONF_DBUS_DATABASE_GET_ALL_DIRS    "AllDirs"
 #define GCONF_DBUS_DATABASE_SET_SCHEMA      "SetSchema"
+#define GCONF_DBUS_DATABASE_SUGGEST_SYNC    "SuggestSync"
 
 #define GCONF_DBUS_DATABASE_ADD_NOTIFY      "AddNotify"
 #define GCONF_DBUS_DATABASE_REMOVE_NOTIFY   "RemoveNotify"
